split agency_full into agency and state for YTD table, fixed alignment

--- a/docs/table/table.css
+++ b/docs/table/table.css
@@ -87,7 +87,12 @@ th:last-child {
     border-top-right-radius: 8px;
 }
 
-td:first-child {
+th:nth-child(2) {
+    text-align: left;
+}
+
+td:first-child,
+td:nth-child(2) {
     text-align: left;
 }
 
